ssl/demo-nginx-deploy-ssl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx-deploy-ssl
  labels:
    app: nginx
    for: ssl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      for: ssl
  template:
    metadata:
      labels:
        app: nginx
        for: ssl
    spec:
      containers:
      - name: nginx
        image: nginx:1.12.2
        ports:
        - containerPort: 80
