ssl/demo-ingress-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-ingress-controller-svc
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30082
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443
  selector:
    app: ingress-nginx
