ssl/demo-nginx-ingress-ssl-v1beta1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-nginx-ingress-ssl
spec:
  rules:
  - host: ssl.laisontech.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-nginx-svc-ssl
          servicePort: 80
