ssl/lapis-ui-ingress-lab.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lapis-ui-ingress-lab
  namespace: lapis-lab
  annotations:
    kubernets.io/ingress.class: "nginx"
spec:
  rules:
    - host: lapis.lab.laisontech.com
      http:
        paths:
          - path: /
            backend:
              serviceName: lapis-ui-svc
              servicePort: 80
              #    - host: lapis.lab.laisontech.com
              #      http:
              #        paths:
              #          - path: /
              #            backend:
              #              serviceName: lapis-ui-svc
              #              servicePort: 443
